# autotools-sample

./: .gitignore  README  README.md  configure.ac
include/: repo.h  tracker.h
src/: Makefile.am  main.c  repo.c  tracker.c
test/: Makefile.am  testrepo.c  tests.c  tests.h
